# smelt

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md  deny.toml  prek.toml  smelt.toml  smelt.toml.example
.cargo/: config.toml
.githooks/: pre-commit
benchmark/: BENCHMARK.md
benchmark/smelt/: bench.smelt
benchmark/tofu/: main.tf
crates/smelt-aws/: Cargo.toml
crates/smelt-aws/src/: lib.rs
crates/smelt-aws/src/aws/: acm.rs  apigateway.rs  autoscaling.rs  cloudfront.rs  cloudwatch.rs  cognito.rs  dynamodb.rs  ec2.rs  ecr.rs  ecs.rs  efs.rs  eks.rs  elasticache.rs  elbv2.rs  eventbridge.rs  iam.rs  kms.rs  lambda.rs  logs.rs  mod.rs  rds.rs  route53.rs  s3.rs  secretsmanager.rs  ses.rs  sfn.rs  sns.rs  sqs.rs  ssm.rs  wafv2.rs
crates/smelt-gcp/: Cargo.toml
crates/smelt-gcp/src/: lib.rs
crates/smelt-gcp/src/gcp/: alloydb.rs  apikeys.rs  artifactregistry.rs  bigquery.rs  certificatemanager.rs  compute.rs  container.rs  dns.rs  eventarc.rs  filestore.rs  functions.rs  gkebackup.rs  iam.rs  kms.rs  loadbalancing.rs  logging.rs  memorystore.rs  mod.rs  monitoring.rs  networkconnectivity.rs  networksecurity.rs  networkservices.rs  orgpolicy.rs  privateca.rs  pubsub.rs  run.rs  scheduler.rs  secretmanager.rs  servicedirectory.rs  spanner.rs  sql.rs  storage.rs  tasks.rs  workflows.rs  workstations.rs
crates/smelt-provider/: Cargo.toml
crates/smelt-provider/src/: lib.rs
design/: sdk-codegen-strategy.md
docs/: rust_patterns.md
examples/: cloud-run-service.smelt  cloud-run-with-db.smelt  cloudflare-dns.smelt  components.smelt  gcp-complex-test.smelt  gcp-free-tier-test.smelt  gcp-lro-test.smelt  gcp-needs-test.smelt  gke-stack.smelt  google-workspace.smelt  instance-test.smelt  integration-test.smelt  karkinos-scanner.smelt  live-test.smelt  minimal-dev-stack.smelt  private-tier.smelt  secrets.smelt  vpc.smelt
fuzz/: .gitignore  Cargo.toml
fuzz/dicts/: smelt.dict
fuzz/fuzz_targets/: fuzz_diff.rs  fuzz_formatter.rs  fuzz_graph.rs  fuzz_parser.rs  fuzz_store.rs
src/: lib.rs  main.rs  telemetry.rs
src/apply/: mod.rs
src/ast/: mod.rs
src/audit/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/explain/: mod.rs
src/formatter/: mod.rs
src/graph/: mod.rs
src/parser/: mod.rs
src/plan/: mod.rs
src/provider/: mock.rs  mod.rs
src/provider/aws/: acm.rs  apigateway.rs  autoscaling.rs  cloudfront.rs  cloudwatch.rs  cognito.rs  dynamodb.rs  ec2.rs  ecr.rs  ecs.rs  efs.rs  eks.rs  elasticache.rs  elbv2.rs  eventbridge.rs  iam.rs  kms.rs  lambda.rs  logs.rs  mod.rs  rds.rs  route53.rs  s3.rs  secretsmanager.rs  ses.rs  sfn.rs  sns.rs  sqs.rs  ssm.rs  wafv2.rs
src/provider/cloudflare/: mod.rs
src/provider/gcp/: alloydb.rs  apikeys.rs  artifactregistry.rs  certificatemanager.rs  compute.rs  container.rs  dns.rs  eventarc.rs  filestore.rs  functions.rs  gkebackup.rs  iam.rs  kms.rs  loadbalancing.rs  logging.rs  memorystore.rs  mod.rs  monitoring.rs  networkconnectivity.rs  networksecurity.rs  networkservices.rs  orgpolicy.rs  privateca.rs  pubsub.rs  run.rs  scheduler.rs  secretmanager.rs  servicedirectory.rs  spanner.rs  sql.rs  storage.rs  tasks.rs  workflows.rs  workstations.rs
src/provider/google_workspace/: mod.rs
src/secrets/: mod.rs
src/signing/: mod.rs
src/store/: backend.rs  gcs.rs  local.rs  mod.rs
tests/: aws_live_test.rs  gcp_live_test.rs  gcs_backend_test.rs  integration_tests.rs  property_tests.rs
tools/codegen/: Cargo.toml  aws_catalog.toml  gcp_catalog.toml
tools/codegen/src/: catalog.rs  generate.rs  introspect.rs  lib.rs  main.rs  manifest.rs
tools/codegen/tests/: property_tests.proptest-regressions  property_tests.rs
