[package]
name = "smelt"
version = "0.1.0"
edition = "2024"
description = "Declarative infrastructure-as-code with semantic backing"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Parsing & error reporting
chumsky = "0.9"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# Content-addressable store
blake3 = "1"

# Dependency graph
petgraph = "0.7"

# Diffing
similar = { version = "2", features = ["text"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for provider API calls)
tokio = { version = "1", features = ["rt", "macros", "time"] }
futures = "0.3"

# AWS SDK — uses aws-lc-rs + rustls by default (no openssl)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-s3 = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-ecs = "1"
aws-sdk-ecr = "1"
aws-sdk-rds = "1"
aws-sdk-lambda = "1"
aws-sdk-route53 = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
aws-sdk-kms = "1"
aws-sdk-dynamodb = "1"
aws-sdk-cloudfront = "1"
aws-sdk-acm = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-ssm = "1"
aws-sdk-elasticache = "1"
aws-sdk-efs = "1"
aws-sdk-apigatewayv2 = "1"
aws-sdk-sfn = "1"
aws-sdk-eventbridge = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-autoscaling = "1"
aws-sdk-eks = "1"
aws-sdk-wafv2 = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-sesv2 = "1"

# AWS crypto — FIPS-validated, use instead of ring
# We'll use this for signing state transitions and future TLS needs
aws-lc-rs = "1"

# GCP SDK — official Google Cloud Rust crates (googleapis org)
google-cloud-auth = "1"
google-cloud-compute-v1 = { version = "2", features = [
    "instances", "networks", "subnetworks", "firewalls", "addresses",
    "disks", "routes", "backend-services", "health-checks",
    "forwarding-rules", "global-addresses", "global-forwarding-rules",
    "autoscalers", "images", "instance-templates", "instance-groups",
    "routers", "security-policies", "snapshots", "ssl-certificates",
    "url-maps", "target-http-proxies", "target-https-proxies",
    "vpn-gateways", "vpn-tunnels", "reservations",
    "interconnect-attachments", "firewall-policies", "resource-policies",
] }
google-cloud-storage = "1"
google-cloud-sql-v1 = "2"
google-cloud-iam-v1 = "1"
google-cloud-iam-admin-v1 = "1"
google-cloud-dns-v1 = "1"
google-cloud-container-v1 = "1"
google-cloud-run-v2 = "1"
google-cloud-functions-v2 = "1"
google-cloud-api = "1"
google-cloud-pubsub = "0.32.3-preview"
google-cloud-wkt = "1"
google-cloud-kms-v1 = "1"
google-cloud-secretmanager-v1 = "1"
google-cloud-logging-v2 = "1"
google-cloud-monitoring-v3 = "1"
google-cloud-longrunning = "1"
bytes = { version = "1", features = ["serde"] }
google-cloud-rpc = "1"

[dev-dependencies]
proptest = "1"
