[workspace]
members = [".", "crates/smelt-provider", "crates/smelt-aws", "crates/smelt-gcp"]
exclude = ["tools/codegen", "fuzz"]
resolver = "3"

[package]
name = "smelt"
version = "0.1.0"
edition = "2024"
description = "Declarative infrastructure-as-code with semantic backing"
license = "MIT"

[dependencies]
# Workspace crates
smelt-provider = { path = "crates/smelt-provider" }
smelt-aws = { path = "crates/smelt-aws", optional = true }
smelt-gcp = { path = "crates/smelt-gcp", optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Parsing & error reporting
chumsky = "0.9"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# Content-addressable store
blake3 = "1"

# GCS state backend
reqwest = { version = "0.13", features = ["json", "blocking"] }
urlencoding = "2"
gethostname = "1"
google-cloud-auth = "1"

# Dependency graph
petgraph = "0.7"

# Diffing
similar = { version = "2", features = ["text"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for provider API calls)
tokio = { version = "1", features = ["rt", "macros", "time"] }
futures = "0.3"

# AWS crypto — FIPS-validated, use instead of ring
aws-lc-rs = "1"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (optional OTLP export — `cargo build --features otel`)
opentelemetry = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", optional = true }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }

[features]
default = ["providers"]
providers = ["smelt-aws", "smelt-gcp"]
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

[dev-dependencies]
proptest = "1"
