[package]
name = "smelt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.smelt]
path = ".."

# Fuzz targets

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_diff"
path = "fuzz_targets/fuzz_diff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_formatter"
path = "fuzz_targets/fuzz_formatter.rs"
test = false
doc = false
bench = false
