[package]
name = "smelt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

# Lightweight — no cloud SDK deps, compiles fast with ASAN
smelt-provider = { path = "../crates/smelt-provider" }

# Parser/formatter fuzz targets require extracting a smelt-core crate
# to avoid pulling in 50+ GCP SDK crates that OOM during ASAN build.
# TODO: Add fuzz_parser and fuzz_formatter once smelt-core exists.

[[bin]]
name = "fuzz_diff"
path = "fuzz_targets/fuzz_diff.rs"
test = false
doc = false
bench = false
