[package]
name = "smelt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

# Lightweight — no cloud SDK deps, compiles fast with ASAN
smelt-provider = { path = "../crates/smelt-provider" }

# Core smelt without provider SDKs — parser, formatter, AST only.
# default-features = false skips smelt-aws/smelt-gcp (50+ SDK crates
# that OOM at 23GB during ASAN-instrumented builds).
smelt = { path = "..", default-features = false }

[[bin]]
name = "fuzz_diff"
path = "fuzz_targets/fuzz_diff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_formatter"
path = "fuzz_targets/fuzz_formatter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_graph"
path = "fuzz_targets/fuzz_graph.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_store"
path = "fuzz_targets/fuzz_store.rs"
test = false
doc = false
bench = false
