[package]
name = "smelt-gcp"
version = "0.1.0"
edition = "2024"

[dependencies]
smelt-provider = { path = "../smelt-provider" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }

# GCP SDK
google-cloud-auth = "1"
google-cloud-compute-v1 = { version = "2", features = [
    "instances", "networks", "subnetworks", "firewalls", "addresses",
    "disks", "routes", "backend-services", "health-checks",
    "forwarding-rules", "global-addresses", "global-forwarding-rules",
    "autoscalers", "images", "instance-templates", "instance-groups",
    "routers", "security-policies", "snapshots", "ssl-certificates",
    "url-maps", "target-http-proxies", "target-https-proxies",
    "vpn-gateways", "vpn-tunnels", "reservations",
    "interconnect-attachments", "firewall-policies", "resource-policies",
] }
google-cloud-storage = "1"
google-cloud-sql-v1 = "2"
google-cloud-iam-v1 = "1"
google-cloud-iam-admin-v1 = "1"
google-cloud-dns-v1 = "1"
google-cloud-container-v1 = "1"
google-cloud-run-v2 = "1"
google-cloud-functions-v2 = "1"
google-cloud-api = "1"
google-cloud-pubsub = "0.32.3-preview"
google-cloud-wkt = "1"
google-cloud-kms-v1 = "1"
google-cloud-secretmanager-v1 = "1"
google-cloud-logging-v2 = "1"
google-cloud-monitoring-v3 = "1"
google-cloud-longrunning = "1"
google-cloud-rpc = "1"
google-cloud-artifactregistry-v1 = "1.5.0"
google-cloud-certificatemanager-v1 = "1.6.0"
google-cloud-memorystore-v1 = "1.6.0"
google-cloud-lro = "1.3.1"
google-cloud-scheduler-v1 = "1"
google-cloud-tasks-v2 = "1"
google-cloud-servicedirectory-v1 = "1"
google-cloud-build-v1 = "1"
google-cloud-eventarc-v1 = "1"
google-cloud-apikeys-v2 = "1"
google-cloud-vpcaccess-v1 = "1"
google-cloud-alloydb-v1 = "1"
google-cloud-filestore-v1 = "1"
google-cloud-spanner-admin-database-v1 = "1"
google-cloud-spanner-admin-instance-v1 = "1"
google-cloud-security-privateca-v1 = "1"
google-cloud-networkconnectivity-v1 = "1"
google-cloud-networksecurity-v1 = "1"
google-cloud-networkservices-v1 = "1"
google-cloud-workstations-v1 = "1"
google-cloud-domains-v1 = "1"
google-cloud-resourcemanager-v3 = "1"
google-cloud-orgpolicy-v2 = "1"
google-cloud-gkebackup-v1 = "1"
google-cloud-dataproc-v1 = "1"
google-cloud-workflows-v1 = "1"

# BigQuery — direct REST API (no SDK crate — all BigQuery crates use reqwest 0.12,
# but google-cloud-auth requires 0.13)
reqwest = { version = "0.13", features = ["json"] }
