[package]
name = "smelt-codegen"
version = "0.1.0"
edition = "2024"
description = "Generate smelt provider code from SDK crate introspection"

[lib]
name = "smelt_codegen"
path = "src/lib.rs"

[[bin]]
name = "smelt-codegen"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"

[dev-dependencies]
proptest = "1"
syn = { version = "2", features = ["full", "parsing"] }
